--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: >-                        # used by seo meta and the atom feed
   A blog to take notes of what I learn, Writ-Up and many more...
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://nouman404.github.io/'
+url: 'nouman404.github.io'
 
 github:
   username: Batbato             # change to your github username
