--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,10 +6,10 @@
 -
   type: hackthebox
   icon: 'fas fa-cube'
-  url: 'https://app.hackthebox.com/profile/380109'
--
-  type: twitter
-  icon: 'fab fa-twitter'
+  url: 'https://app.hackthebox.com/profile/235762'
+#-
+#  type: twitter
+#  icon: 'fab fa-twitter'
 # -
 #   type: email
 #   icon: 'fas fa-envelope'
