--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ description: >-                        # used by seo meta and the atom feed
 url: 'nouman404.github.io'
 
 github:
-  username: Batbato             # change to your github username
+  username: Nouman404             # change to your github username
 
 twitter:
   username:             # change to your twitter username
