--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,6 +7,11 @@
   type: hackthebox
   icon: 'fas fa-cube'
   url: 'https://app.hackthebox.com/profile/235762'
+-
+  type: tryhackme
+  icon: 'fas fa-thm'
+  url: 'https://tryhackme.com/p/Batbato'
+  
 #-
 #  type: twitter
 #  icon: 'fab fa-twitter'
