--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -9,7 +9,7 @@
   url: 'https://app.hackthebox.com/profile/235762'
 -
   type: tryhackme
-  icon: 'fa-regular fa-cloud'
+  icon: 'far fa-cloud'
   url: 'https://tryhackme.com/p/Batbato'
   
 #-
